--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/price.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/cost.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/forms.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/footer.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -396,13 +397,41 @@
 		<div class="container">
 			<div class="forms__content">
 				<form class="form">
-					<input type="text" placeholder="Имя" class="form__particle">
-					<input type="text" placeholder="Телефон" class="form__particle">
-					<input type="text" placeholder="E-mail" class="form__particle">
+					<input type="text" placeholder="Имя" class="input">
+					<input type="text" placeholder="Телефон" class="input">
+					<input type="email" placeholder="E-mail" class="input">
 					<button class="button -success -in">Записаться на курс</button>
 				</form>
 			</div>
 		</div>
 	</section>
+
+	<footer class="footer">
+		<div class="footer -top">
+			<div class="container">
+				<div class="footer__content">
+					<div class="footer__location">
+						<a href="" class="footer__link -up -b">Санкт-Петербург</a>
+						<a href="" class="footer__link -up">Москва</a>
+						<a href="" class="footer__link -up -mg">Минск</a>
+					</div>
+
+					<button class="button -blue">Запись на курс</button>
+				</div>
+			</div>
+		</div>
+		
+		<div class="footer -bottom">
+			<div class="container">
+				<div class="footer__content">
+					<h5 class="copyright">Copyright © 2018 All rights reserved</h5>
+					<div class="footer__info">
+						<a href="" class="footer__link -op">Договор-оферта</a>
+						<a href="" class="footer__link -op -mg">Политика конфиденциальности</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
